--- a/app/assets/style/_variables.scss
+++ b/app/assets/style/_variables.scss
@@ -5,7 +5,7 @@ $color-primary: #650300; //暗紅
 $color-secondary: #aa0601; //亮紅
 $color-light: #fbf2f2; //粉紅
 
-$font-family: "Roboto", "Noto Sans", sans-serif;
+$font-family: Roboto , "Noto Sans", Arial, sans-serif;
 
 // Small devices (landscape phones, less than 768px)
 $tablet-width: 768px;
