--- a/app/assets/style/_layout.scss
+++ b/app/assets/style/_layout.scss
@@ -3,29 +3,78 @@ body{
 }
 
 .container {
-    width: 1110px;
-    margin: 0 auto;
-    // background-color: pink;
-    @include tablet {
-      width: 90%;
-      background-color: red;
-    }
-    @include phone {
-      background-color: blue;
-    }
+  max-width: 1140px; //1110 + 30 gutter
+  margin: 0 auto;
+  padding: 60px 15px;
+  @include tablet {
+    max-width: 720px;
+    padding: 40px 15px;
+  }
+  @include phone {
+    max-width: 546px;
+    padding: 32px 15px;
+  }
 }
 
-.header{
+.title{
+  font-size: 48px;
+  font-weight: 900;
+  text-align: center;
+  margin-bottom: 40px;
+  @include tablet {
+    font-size: 32px;
+  }
+  @include phone {
+    font-size: 24px;
+  }
+}
+
+header{
   background-color: $color-secondary;
   padding: 30px 5%;
-  // position: fixed;
+  justify-content: space-between;
+  @include phone {
+    padding: 0;
+    flex-direction: column;
+  }
   a{
+    color:#fff;
+  }
+  .logo{
+    @include phone {
+      text-align: center;
+      padding: 10px 0;
+      img{
+        max-width:48px ;
+      }
+    }
+  }
+  nav ul{
+    @include phone {
+      width: 100vw;
+    }
+  }
+  nav li{
     padding: 5px 10px;
     font-size:20px;
-    line-height: 24px;
     font-weight: 300;
     color: #fff;
     transform: translate3d(0, 0, 0);
+    @include phone {
+      width: 50%;
+      padding: 0;
+      a{
+        display: block;
+        padding: 8px 0;
+        text-align: center;
+        border: 1px solid #fff;
+        &:hover{
+          color: $color-secondary;
+          background-color: #fff;
+          border: 1px solid $color-secondary;
+        }
+      }    
+    }
     &:after{
       content: "";
       display: block;
@@ -36,6 +85,9 @@ body{
       pointer-events: none;
       width: 0;
       transition: all 0.3s 0s cubic-bezier(0.455, 0.03, 0.515, 0.955);
+      @include phone {
+        display: none;
+      }
     }
      &:hover{
        &:after{
@@ -47,44 +99,103 @@ body{
 
 .footer{
   background-color: $color-secondary;
-  padding: 32px 0px;
-  font-size:16px;
-  line-height: 24px;
   font-weight: 300;
-  .footerNav li{
-   padding-right:48px;
-  }
-  .social li{
-   padding-left:32px;
+  padding-top: 32px;
+  @include phone {
+    padding-top: 24px;
   }
   a{
-    color: #fff;
+    color:#fff;
     &:hover{
-      color:antiquewhite;
+      color: yellow;
     }
   }
-  .con{
-    margin: 20px 0 24px 0;
-    a{
-     font-size:36px;
-     line-height: 54px;
-     margin-top: 16px;
-    }
-    img{
-      margin-right:20px;
-    }
+  
+}
+
+.footerTop{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  @include phone {
+    position: relative;
   }
-  .copyright{
-    border-top: 1px solid #fff;
-    padding-top: 32px;
-    .privacyList{
-      font-size:14px;
-      line-height: 21px;
-      li{
-        padding-left:48px;
-      }
+}
+
+.social{
+  @include phone {
+    position: absolute;
+    right: 0px;
+    top:30px;
+  }
+  li{
+    margin-left: 32px;
+    @include tablet {
+     width: 24px;
+     margin-left: 24px;
+   }
+  }
+}
+
+.footerNav{
+  font-size: 16px;
+  @include phone {
+    display: none;
+  }
+  a{
+    margin-right: 48px;
+    @include tablet {
+      margin-right: 40px;
     }
   }
 }
 
+.con{
+  font-size: 36px;
+  margin-top: 36px;
+  @include tablet {
+    font-size: 20px;
+  }
+  @include phone {
+    font-size: 16px;
+  }
+  a{
+    margin-bottom: 24px;
+    @include phone {
+      margin-bottom: 6px;
+     }
+  }
+  img{
+    margin-right:20px ;
+    @include tablet {
+      margin-right:10px ;
+      width: 20px;
+     }
+  }
+}
 
+.copyright{
+  padding: 36px 0;
+  border-top: 1px solid #fff;
+  justify-content: space-between;
+  @include phone {
+    margin-top: 24px;
+    font-size: 14px;
+    padding: 14px 0;
+    flex-direction: column; 
+   }
+}
+
+.privacyList{
+  li{
+    font-size: 14px;
+    margin-left: 48px;
+    @include phone {
+      margin-left:0px;
+      margin-top:8px;
+     }
+  }
+  @include phone {
+    flex-direction: column; 
+   }
+}
