--- a/app/assets/style/_util.scss
+++ b/app/assets/style/_util.scss
@@ -1,21 +1,27 @@
-// text
+/* text style */
+
+.italic{
+  font-style: italic;
+}
+
+.uppercase{
+  text-transform:uppercase;
+}
 
 .text-white{
-  color: #fff;
+  color: white;
 }
 
-// 顯示
-
-.block{
-  display: block;
+.text-black{
+  color: black;
 }
 
-.hidden{
-  display: none;
+.text-primary{
+  color: $color-primary;
 }
 
-.inline-block{
-  display: inline-block;
+.text-secondary{
+  color: $color-secondary;
 }
 
 .m-auto{
@@ -26,38 +32,74 @@
   overflow: hidden;
 }
 
-// flex
+.auto-height{
+  height: 100%;
+}
 
-.flex{
+// 顯示
+
+.d-none{
+  display: none !important;
+}
+
+.d-block{
+  display: block;
+}
+
+.inline-block{
+  display: inline-block;
+}
+
+// flex
+.d-flex{
   display: flex;
 }
 
 .row {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: wrap; //多行
 }
 
+//決定軸線方向
 .column{
-  flex-direction: column;
+  flex-direction: column;  //從上到下，再由左到右
 }
 
-.items-center{
-  align-items: center;
+.column-reverse{
+  flex-direction:column-reverse;
 }
 
-.items-start{
-  align-items: flex-start;
+.row-reverse{
+  flex-direction:row-reverse;
 }
 
+//主軸對齊
 .justify-center{
-  justify-content: center;
+  justify-content: center; //水平置中
 }
 
 .justify-between{
   justify-content: space-between;
 }
 
-.content-start{
-  align-content: flex-start;
+.justify-around{
+  justify-content: space-around;
 }
 
+.justify-end{
+  justify-content: flex-end; //對齊最左邊的 main end
+}
+
+//交錯軸單行對齊
+.items-center{
+  align-items: center; //垂直置中
+}
+
+.items-start{
+  align-items: flex-start; //對齊最上面的 cross start
+}
+
+//交錯軸多行對齊
+.content-start{
+  align-content: flex-start; //對齊最上面的 cross start
+}
