--- a/app/assets/style/all.scss
+++ b/app/assets/style/all.scss
@@ -1,8 +1,8 @@
 @import 'variables'; // 變數
 @import 'reset'; // reset.css
 @import 'grid'; // 斷點
-@import "util"; // 工具類 class
-@import 'layout'; // 共通區塊
+@import "util"; // 工具類，通用類別
+@import 'layout'; // 共通區塊與元件
 
 // 頁面設計
 @import 'page/index';
