--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -8,52 +8,51 @@
   <title><%- title %></title>
   <link rel="stylesheet" href="./assets/style/all.css">
 </head>
-
 <body>
- <div class="header text-white flex justify-between">
-  <div class="logo"><img src="https://hexschool.github.io/webLayoutTraining1st/week3/logo.png" alt="Logo"></div>
-  <menu>
-    <ul class="flex">
+<header class="text-white d-flex justify-between">
+  <div class="logo"><a href="index.html"><img src="https://hexschool.github.io/webLayoutTraining1st/week3/logo.png" alt="Logo"></a></div>
+  <nav class="menu">
+    <ul class="row">
       <li><a href="#">系列鏡框</a></li>
       <li><a href="#">門市據點</a></li>
       <li><a href="#">部落格</a></li>
       <li><a href="#">常見問題</a></li>
     </ul>
-  </menu>
-</div>
+  </nav>
+</header>
 
-  <%- contents %>
+<%- contents %>
 
-<div class="footer text-white">
+<footer class="footer text-white">
   <div class="container">
-   <div class="flex justify-between items-center">
-    <ul class="footerNav row">
+   <div class="footerTop">
+    <ul class="footerNav d-flex">
       <li><a href="#">首頁</a></li>
       <li><a href="#">系列鏡框</a></li>
       <li><a href="#">門市據點</a></li>
       <li><a href="#">部落格</a></li>
       <li><a href="#">常見問題</a></li>
     </ul>
-    <ul class="social row">
+    <ul class="social d-flex">
       <li><a href="#"><img src="https://hexschool.github.io/webLayoutTraining1st/week3/icon-fb.svg" alt="fb"></a></li>
       <li><a href="#"><img src="https://hexschool.github.io/webLayoutTraining1st/week3/icon-ig.svg" alt="ig"></a></li>
       <li><a href="#"><img src="https://hexschool.github.io/webLayoutTraining1st/week3/icon-line.svg" alt="line"></a></li>
     </ul>
     </div>
-    <div class="con row column">
-      <a href="tel:+0800-000-000"><img src="https://hexschool.github.io/webLayoutTraining1st/week3/icon-mail.svg" alt="phone">0800-000-000</a>
+    <div class="con d-flex column">
+      <a href="tel:+0800-000-000"><img src="https://hexschool.github.io/webLayoutTraining1st/week3/icon-phone.svg" alt="phone">0800-000-000</a>
       <a href="mailto:glasses@business.com"><img src="https://hexschool.github.io/webLayoutTraining1st/week3/icon-mail.svg" alt="mail">glasses@business.com</a>
     </div>
 
-    <div class="copyright flex justify-between">
+    <div class="copyright d-flex">
       <p>Copyright © 2020 Glasses.All rights reserved.</p>
-      <ul class="privacyList row">
+      <ul class="privacyList d-flex">
         <li><a href="">隱私權政策</a></li>
         <li><a href="">服務條款</a></li>
       </ul>
     </div>
 
   </div>
-</div>
+</footer>
 </body>
 </html>
