--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -14,7 +14,7 @@
   <nav class="menu">
     <ul class="row">
       <li><a href="#">系列鏡框</a></li>
-      <li><a href="#">門市據點</a></li>
+      <li><a href="location.html">門市據點</a></li>
       <li><a href="#">部落格</a></li>
       <li><a href="#">常見問題</a></li>
     </ul>
