--- a/app/assets/style/_variables.scss
+++ b/app/assets/style/_variables.scss
@@ -1,15 +1,15 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&display=swap');
+$color-primary: #C0A4A5; //淺粉紅
+$color-secondary: #907A7B; //深粉紅
+$color-light: #F5F0E7; //淺黃
+$color-dark: #707070; //深灰
 
-$color-primary: #650300; //暗紅
-$color-secondary: #aa0601; //亮紅
-$color-light: #fbf2f2; //粉紅
+$font-family: source-han-sans-traditional , Arial , sans-serif;
 
-$font-family: Roboto , "Noto Sans", Arial, sans-serif;
 
 // Small devices (landscape phones, less than 768px)
 $tablet-width: 768px;
 
-// Extra small devices (portrait phones, less than 576px)
-$phone-width: 576px;
+// Extra small devices (portrait phones, less than 414px)
+$phone-width: 414px;
 
