--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -6,53 +6,86 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title><%- title %></title>
+  <!-- swiper -->
+  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+  <!-- JQ -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <!-- google Icon -->
+  <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
+  <!-- 思源黑體 -->
+  <script>
+    (function(d) {
+      var config = {
+        kitId: 'wbm5gsk',
+        scriptTimeout: 3000,
+        async: true
+      },
+      h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
+    })(document);
+  </script>
   <link rel="stylesheet" href="./assets/style/all.css">
+  <script src="./assets/js/all.js"></script>
 </head>
 <body>
-<header class="text-white d-flex justify-between">
-  <div class="logo"><a href="index.html"><img src="https://hexschool.github.io/webLayoutTraining1st/week3/logo.png" alt="Logo"></a></div>
-  <nav class="menu">
-    <ul class="row">
-      <li><a href="#">系列鏡框</a></li>
-      <li><a href="location.html">門市據點</a></li>
-      <li><a href="#">部落格</a></li>
-      <li><a href="#">常見問題</a></li>
-    </ul>
-  </nav>
+<header class="d-flex">
+  <div class="logo"><a href="index.html">DOYOGA</a></div>
+  <nav>
+		<ul class="fw-light">
+			<li><a href="#">課程介紹</a></li>
+			<li><a href="#">瑜珈空間</a></li>
+			<li><a href="#">當月課表</a></li>
+		</ul>
+    <ul class="topLink fw-regular">
+			<li><a href="#">立即預約</a></li>
+			<li><a href="#">聯絡我們</a></li>
+		</ul>
+	</nav>
+	<div class="menu-toggle">
+    <span class="material-icons">menu</span>
+	</div>
 </header>
+
+<div class="contact">
+  <ul>
+    <li><a href="#"><img src="./assets/images/icon-fb_c.svg" alt="fb"></a></li>
+    <li><a href="#"><img src="./assets/images/icon-ig_c.svg" alt="ig"></a></li>
+    <li><a href="#"><img src="./assets/images/icon-line_c.svg" alt="line"></a></li>
+  </ul>
+</div>
 
 <%- contents %>
 
 <footer class="footer text-white">
-  <div class="container">
-   <div class="footerTop">
-    <ul class="footerNav d-flex">
-      <li><a href="#">首頁</a></li>
-      <li><a href="#">系列鏡框</a></li>
-      <li><a href="#">門市據點</a></li>
-      <li><a href="#">部落格</a></li>
-      <li><a href="#">常見問題</a></li>
-    </ul>
-    <ul class="social d-flex">
-      <li><a href="#"><img src="https://hexschool.github.io/webLayoutTraining1st/week3/icon-fb.svg" alt="fb"></a></li>
-      <li><a href="#"><img src="https://hexschool.github.io/webLayoutTraining1st/week3/icon-ig.svg" alt="ig"></a></li>
-      <li><a href="#"><img src="https://hexschool.github.io/webLayoutTraining1st/week3/icon-line.svg" alt="line"></a></li>
-    </ul>
+ <div class="footerTop">
+  <div class="container subscribe d-flex">
+    <p class="fw-medium">現在訂閱，獲得課程優惠碼！</p>
+    <div class="input-group">
+      <input type="text" placeholder="輸入您的電子信箱" aria-label="輸入您的電子信箱">
+      <button type="button">訂閱</button>
     </div>
-    <div class="con d-flex column">
-      <a href="tel:+0800-000-000"><img src="https://hexschool.github.io/webLayoutTraining1st/week3/icon-phone.svg" alt="phone">0800-000-000</a>
-      <a href="mailto:glasses@business.com"><img src="https://hexschool.github.io/webLayoutTraining1st/week3/icon-mail.svg" alt="mail">glasses@business.com</a>
-    </div>
-
-    <div class="copyright d-flex">
-      <p>Copyright © 2020 Glasses.All rights reserved.</p>
-      <ul class="privacyList d-flex">
-        <li><a href="">隱私權政策</a></li>
-        <li><a href="">服務條款</a></li>
-      </ul>
-    </div>
-
   </div>
+ </div>
+</div>
+ <div class="container">
+  <div class="d-flex justify-between">
+  <div class="logo footerLogo"><a href="">DOYOGA</a></div>
+  <ul class="social d-flex">
+    <li><a href="#"><img src="./assets/images/icon-fb.svg" alt="fb"></a></li>
+    <li><a href="#"><img src="./assets/images/icon-ig.svg" alt="ig"></a></li>
+    <li><a href="#"><img src="./assets/images/icon-line.svg" alt="line"></a></li>
+  </ul>
+ </div>
+ <div class="footerBottom">
+  <ul class="footerNav fw-light">
+    <li><a href="#">課程介紹</a></li>
+    <li><a href="#">瑜珈空間</a></li>
+    <li><a href="#">當月課表</a></li>
+  </ul>
+  <p class="copyright fw-light">© 2021. All Rights Reserved.</p>
+  <div></div>
+ </div>
+</div>
 </footer>
 </body>
 </html>
