--- a/app/assets/style/_reset.scss
+++ b/app/assets/style/_reset.scss
@@ -52,7 +52,7 @@ img{
 	vertical-align: middle;
 }
 h1,h2,h3{
-	// font-weight: bold;
+	font-weight: bold;
 }
 *,*::before,*::after{
 	box-sizing: border-box;
