--- a/app/assets/style/page/_index.scss
+++ b/app/assets/style/page/_index.scss
@@ -1,408 +1,258 @@
 .banner{
-  background: url(../images/banner.jpg) no-repeat center center;
+  background: url(https://hexschool.github.io/webLayoutTraining1st/week3/banner.png) no-repeat center center;
   background-size: cover;
-  background-position: 50% 100%;
-  height: 582px;
-  color:$color-dark;
-  text-align: left;
+  height: 840px;
+  color:$color-primary;
+  text-align: right;
   h1{
     font-size: 36px;
-    @include phone {
-      font-size: 28px;
+    line-height: 72px;
+    font-weight: 400;
+    @include tablet {
+      font-size: 20px;
+      line-height: 60px;
     }
+    @include phone {
+      font-size: 16px;
+      line-height: 32px;
+    }
+    span{
+      display: block;
+      font-size: 64px;
+      font-weight: 700;
+      @include tablet {
+        font-size: 48px;
+      }
+      @include phone {
+        font-size: 32px;
+      }
+    }
+  }
+  @include phone {
+    height: 394px;
+  }
+}
+
+.service{
+  background-color: $color-light;
+  @include tablet {
+    padding: 40px 0;
+  }
+  @include phone {
+    padding: 32px 0;
+  }
+  li{
+    width: 255px;
+    @include tablet {
+      width: 35%;
+      margin: 40px;
+    }
+    @include phone {
+      width: 80%;
+      margin: 0 auto;
+      margin-bottom: 40px;
+    }
+  }
+  img{
+    height: 84px;
+    width: 84px;
+    margin-bottom: 24px;
   }
   h2{
     font-size: 24px;
-    max-width:445px ;
+    line-height: 36px;
+    font-weight: 700;
+    margin-bottom: 8px;
+  }
+  p{
+    font-size: 16px;
+    line-height: 24px;
+  }
+}
+
+.classicProduct{
+  .middle{
+    flex-direction: row-reverse;
+    @include tablet {
+      flex-direction: row;
+    }
+  }
+  li{
+    margin-bottom: 32px;
+  }
+  .pic{
+    width: 60%;
     @include phone {
-      font-size: 20px;
+      width:100%;
+    }
+  }
+  p{
+    font-size: 48px;
+    line-height: 72px;
+    font-weight: 700;
+    margin: 0 32px;
+    @include tablet {
+      font-size: 24px;
+    }
+    @include phone {
+      position: absolute;
+      text-align: center;
+      width: 100%;
+      margin: 0;
+    }
+    img{
+      margin-right: 10px;
+      @include tablet {
+        width: 36px;
+      }
+    }
+  }
+}
+
+.seriesProduct{
+  background: url(https://hexschool.github.io/webLayoutTraining1st/week3/bg.png) no-repeat center center;
+  background-size: cover;
+  min-height: 705px;
+  @include tablet {
+    min-height: 452px;
+  }
+  ul{
+    @include phone {
+      flex-direction: column;
+    }
+  }
+  li{
+    position: relative;
+    margin: 15px;
+    @include phone {
+     
+    }
+  }
+  a{
+    &::before{
+      content: "";
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      left: 0;
+      top: 0;
+      background-color: rgba(255,255,255,0.5);
+      transition:all 0.5s;
+    }
+    &:hover{
+      &::before{
+       background-color: rgba(255,255,255,0);
+      }
+    }
+  }
+  p{
+    font-size: 72px;
+    font-weight: 700;
+    position: absolute;
+    color: $color-secondary;
+    pointer-events: none;
+    @include tablet {
+      font-size: 32px;
+    }
+  }
+}
+
+.recommend{
+  li{
+    width: 255px;
+    box-shadow: 0px 2px 6px #00000029;
+    border: 1px solid #DEE2E6;
+    border-radius: 4px;
+    img{
+     border-radius: 4px 4px 0 0;
+     width: 100%;
+    }
+    @include tablet {
+      width: calc((100% - 30px)/2);
+      margin-bottom: 32px;
+    }
+    @include phone {
+      width: 100%;
     }
   }
   .content{
-    padding-left: 95px;
-    @include tablet {
-      padding-left: 30px;
-    }
-    @include phone {
-      padding-left: 0px;
-    }
-  }
-  .btn{
-    margin-top: 16px;
-    margin-right: 8px;
-  }
-}
-
-// 服務內容
-.service{
-  padding: 40px 0 64px 0;
-  @include tablet {
-    padding: 32px 0 48px 0;
-  }
-  ul{
-    justify-content: space-between;
-    @include phone {
-      flex-direction: column;
-    }
-  }
-  ul li{
-    max-width: 350px;
-    text-align: left;
+    height: 204px;
+    padding: 16px;
+    color: #212529;
+    font-size: 14px;
+    line-height: 21px;
     position: relative;
-    @include tablet {
-      max-width: 210px;
-      min-height: 252px;
-    }
-    @include phone {
-      min-width: 100%;
-      margin-bottom: 16px;
-    }
-    img{
-      border-radius: 16px;
-      width: 350px;
-      min-height: 420px;
-      object-fit: cover;
-      @include tablet {
-        min-height: 252px;
-      }
-      @include phone {
-        min-height: 420px;
-      }
-
-    }
-    .content{
-      position: absolute;
-      bottom: 0px;
-      color:#fff;
-      padding: 24px;
-       @include tablet {
-        padding: 16px;
-      }
-    }
-    h2{
-      font-size: 20px;
-      font-weight: 300;
-      margin-bottom: 4px;
-      @include tablet {
-        font-size: 16px;
-      }
-      @include phone {
-        font-size: 20px;
-      }
-    }
+  }
+  .name{
+    margin-bottom: 8px;
+  }
+  .des{
+    font-size: 16px;
+    line-height: 24px;
+  }
+  .time{
+    color: #707070;
+    position: absolute;
+    bottom: 16px;
   }
 }
 
-// 師資
-.teacher{
-  background: $color-light;
-  padding: 64px 0;
-  @include tablet {
-    padding: 32px 0;
-  }
-}
-
-.teacherStart{
-  width: 50%;
-  margin-right: 15px;
-  img{
-    min-width: 540px;
-    max-height: 628px;
-    object-fit: cover;
-    border-radius: 16px;
-  }
-  @include tablet {
-    display: none;
-  }
-}
-
-.teacherEnd{
-  width: 50%;
-  margin-left: 15px;
-  padding-top: 30px;
-  color: $color-dark;
-  a{
-    color: $color-dark;
-  }
-  li{
-    border-radius: 16px;
-    background-color: #fff;
-    padding: 24px;
-    margin-bottom: 16px;
-    img{
-      margin-right: 20px;
-      @include phone {
-       max-width: 48px;
-      }
-    }
-  }
-  @include tablet {
-    margin-left: 0px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-}
-
-.tabs .current{
-  min-width: 635px;
-  margin-left: -75px;
-  padding: 40px;
-  @include phone {
-    min-width: 100%;
-    margin-left: 0px;
-  }
-}
-
-.tab-content {
-  display: none;
-}
-
-.tab-content.current {
-  display: block;
-}
-
-// 環境介紹
-.space{
-  padding: 64px 0;
-  display: flex;
-  flex-direction: row-reverse;
-  @include tablet {
-    padding: 32px 30px;
-  }
-  @include phone {
-    display: block;
-    padding: 32px 15px;
-  }
-}
-
-.spaceEnd{
-  width: 50%;
-  margin-right: 15px;
-  img{
-    border-radius: 16px;
-  }
-  @include phone {
-    width: 100%;
-    margin-top: 16px;
-  }
-}
-
-.first{
-  width: calc(100%/6*4);
-  text-align: center;
-  @include phone {
-    width: 50%;
-   }
-  img{
-    height: 444px;
-    width: 350px;
-    object-fit: cover;
-    @include tablet {
-     width: 210px;
-     height: 266px;
-    }
-    @include phone {
-     width: calc(100% - 15px);
-     height: 210px;
-    }
-  }
-}
-
-.last{
-  width: calc(100%/6*2);
-  text-align: center;
-  @include phone {
-    width: 50%;
-   }
-  img{
-    height: 207px;
-    width: 160px;
-    object-fit: cover;
-    @include tablet {
-     width: 90px;
-     height: 117px;
-    }
-    @include phone {
-     width: calc(100% - 15px);
-     height: 210px;
-    }
-  }
-  img:nth-child(2) {
-    margin-top: 30px;
-    @include tablet {
-     margin-top: 32px;
-    }
-    @include phone {
-     display: none;
-    }
-  }
-}
-
-.spaceStart{
-  width: 50%;
-  margin-left: 15px;
-  @include phone {
-    width: 100%;
-    margin-left: 0px;
-  }
-}
-
-// 課程
-.course{
+.contact{
   background-color: $color-light;
-  padding: 64px 0;
-  justify-content: flex-end;
-  @include phone {
-    display: block;
-    padding: 32px 15px;
-  }
-}
-
-.courseStart{
-  width: 50%;
-  max-width: 520px;
-  margin-right: 15px;
-  @include tablet {
-    max-width: 330px;
-  }
-
-  @include phone {
-    margin: 0 auto;
-    min-width: 345px;
-  }
-}
-
-.courseEnd{
-  width: 50%;
-  margin-left: 15px;
-  @include phone {
-    width: 100%;
-    margin-top: 16px;
-    margin-left: 0px;
-  }
-}
-
-.swiper-slide{
-  overflow: hidden;
-  img{
-    width: 445px;
-    height: 445px;
-    border-radius: 16px;
-    object-fit: cover;
-    @include tablet  {
-    width: 150px;
-    height: 150px;
-   }
-    @include phone {
-    width: 165px;
-    height: 165px;
-   }
-  }
-}
-
-// 方案
-.price{
-  padding: 64px 0;
-  li{
-    width: calc((100% - 60px)/3);
-    border: 1px solid $color-primary;
-    border-radius: 16px;
-    flex-direction: column;
-    img{
-     border-radius: 16px 16px 0 0;
-     width: 100%;
-     height: 243px;
-     object-fit: cover;
-     @include tablet {
-      width: 345px;
-      height: auto;
-      border-radius: 16px 0px 0 16px;
-     }
-     @include phone {
-      border-radius: 16px 16px 0 0;
-     width: 100%;
-     }
-    }
+  .form{
+    max-width: 730px;
     @include tablet {
-      flex-direction: row;
-      width: 100%;
-      margin-bottom: 24px;
-    }
-    @include phone {
-      flex-direction: column;
+      max-width: 450px;
     }
   }
-}
-
-.card{
-  padding: 24px;
-  position: relative;
-  font-weight: 300;
-  h2{
-    font-size: 20px;
-    color: $color-secondary;
-    margin-bottom: 4px;
-  }
-  h3{
-    font-size: 20px;
-    color: $color-primary;
-    margin-bottom:8px;
+  .formGroup{
+    margin-bottom: 16px;
   }
   p{
-    color: $color-secondary;
-    margin-bottom:48px;
-     @include tablet {
-      margin-bottom: 24px;
-    }
-  }
-  button{
-    background-color: $color-primary;
-    color:#fff;
-    width: 100%;
-    &:hover{
-    background-color: $color-secondary;
-   }
-  }
-}
-
-// 推薦
-.recommend{
-  background-color: $color-light;
-  padding: 64px 0;
-}
-
-.mySwiper {
-  margin-top: 32px;
-  overflow-x: hidden!important;
-  color: $color-secondary;
-  .swiper-slide {
-    width: calc((100% - 60px)/3);
-    background: #fff;
-    border-radius: 16px;
-    padding: 16px;
-    justify-content: flex-start;
-    display: flex;
-    align-items: center;
-    @include tablet {
-      width: calc((100% - 30px)/2);
-    }
-  }
-  img{
-    width: 60px;
-    height: auto;
-    margin-right: 20px;
-  }
-  h2 span{
-    font-size: 14px;
-    margin-left: 8px;
-  }
-  h3 span{
-    color: $color-primary;
     font-size: 20px;
+    line-height: 30px;
+    margin-bottom: 20px;
   }
-  .main{
-    text-align: left;
+  input, textarea {
+    display: block;
+    width: 100%;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    background: transparent;
+    border: 1px solid #000;
+    padding: 14px 16px;
+  }
+  label {
+    display: inline-block;
+    margin-bottom: 4px;
+    @include tablet {
+      font-size: 14px;
+      line-height: 21px;
+    }
+  }
+  input[type="checkbox"] {
+    display: unset;
+    width: auto;
+  }
+  .submit {
+    width: 350px;
+    height: 54px;
+    border: 0;
+    display: block;
+    margin: 40px auto 0 auto;
+    background-color: $color-secondary;
+    color: #fff;
+    font-size: 16px;
+    @include tablet {
+      width: 210px;
+      height: 40px;
+    }
+    @include phone {
+      width: 165px;
+      height: 36px;
+    }
+    &:hover{
+      background-color: $color-primary;
+    }
   }
 }
